# shot-scraper

./: .gitignore  Makefile  README.md  pyproject.toml
konnect/ai-manager/: ai-manager.yaml
konnect/analytics/: admin.yaml  konnect-api-usage-summary.yaml  templates-aa.yaml
konnect/catalog/: container.yaml
konnect/datakit/: datakit-code-editor.yaml  datakit-flow-editor-node.yaml  datakit-flow-editor-preview.yaml
konnect/debugger/: debugger-trace-logs-view.yaml  debugger-trace-span-view.yaml  debugger-trace-summary-view.yaml
konnect/dev-portal/: create-portal.yaml  dev-portal-appearance.yaml  dev-portal-editor.yaml  dev-portal-navigation.yaml  konnect-portal-analytics.yaml
konnect/event-gateway/: event-gateway-virtual-cluster.yaml
konnect/gateway-manager/: control-plane-dashboard.yaml
konnect/mesh-manager/: konnect-mesh-control-plane-dashboard.yaml
konnect/platform/: overview.yaml
shot_scraper/: cli.py
