[project]
name = "shot-scraper"
version = "1.2"
description = "A command-line utility for taking automated screenshots of websites"
requires-python = ">=3.10"
dependencies = [
    "click",
    "click-default-group",
    "playwright",
    "greenlet>=3.1.0",
    "PyYAML",
]

[project.scripts]
shot-scraper = "shot_scraper.cli:cli"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["shot_scraper*"]
